--- a/credit_risk_evaluator.ipynb
+++ b/credit_risk_evaluator.ipynb
@@ -5,7 +5,7 @@
    "id": "130115b4-a159-425e-b9bc-e8395e59bb73",
    "metadata": {},
    "source": [
-    "## Dependancies"
+    "## Dependencies"
    ]
   },
   {
